# flask-i18n

./: LICENSE  README.md  pyproject.toml
src/flask_i18n/: __init__.py  extension.py
