[project]
name = "flask-i18n"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Sukhikh",email = "igor.sukhikh@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-caching (>=2.3.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "click (>=8.3.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "flask_i18n", from = "src" }]

[project.urls]
Repository = "https://github.com/you/flask-i18n"